--- a/cover.css
+++ b/cover.css
@@ -55,11 +55,13 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+
 }
 
 
 
 .nav-masthead .nav-link {
+  left: 30%;
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
@@ -73,26 +75,30 @@ body {
 }
 
 .nav-masthead .nav-link + .nav-link {
+  left: 30%;
   margin-left: 1rem;
   color: mediumpurple;
 }
 
 .nav-masthead .active {
+  left: 30%;
   color: yellow;
   border-bottom-color: #fff;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 40em) {
   .masthead-brand {
-
+    left: 30%;
     float: left;
     color: pink
   }
   .nav-masthead {
-    float: right;
+    left: 1%;
+
     color: hotpink;
   }
 }
+
 
 
 /*
