--- a/cover.css
+++ b/cover.css
@@ -39,7 +39,7 @@ body {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
   justify-content: center;
-  color: purple;
+  color: white;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -56,6 +56,12 @@ body {
 .masthead {
   margin-bottom: 2rem;
 
+}
+
+#login{
+  color: #0c5460;
+
+  float:left;
 }
 
 
